--- a/package.json
+++ b/package.json
@@ -9,19 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
+    "@headlessui/react": "1.5.0",
+    "@heroicons/react": "1.0.5",
+    "classnames": "^2.3.2",
+    "formidable": "2.0.1",
+    "formik": "2.2.9",
+    "next": "14.0.4",
+    "nft.storage": "6.0.0",
     "react": "^18",
+    "react-blockies": "^1.4.1",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-toastify": "^9.1.3",
+    "web3modal": "1.9.5",
+    "yup": "0.32.11"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-blockies": "^1.4.4",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "ethers": "5.5.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5"
   }
 }
